# proof-of-panic

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  prometheus.yml  solana-install.sh  test-anchor.ts  test-anchor2.ts  tsconfig.json
.github/workflows/: ci.yml
app/: package-lock.json  package.json
app/public/scenarios/cascading-leverage/: results.json  snapshot.json
app/public/scenarios/flash-crash/: results.json  snapshot.json
app/public/scenarios/mild-correction/: results.json  snapshot.json
app/public/scenarios/short-squeeze/: results.json  snapshot.json
app/public/scenarios/volatility-shock/: results.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/simulate/: route.ts
app/src/app/api/verify/: route.ts
app/src/app/architecture/: layout.tsx  page.tsx
app/src/app/integrate/: layout.tsx  page.tsx
app/src/app/proof-explorer/: layout.tsx  page.tsx
app/src/components/: Footer.tsx
app/src/lib/: proof_of_panic.json  rpc.ts  types.ts  useTheme.ts
circuits/panic_proof/: Nargo.toml
circuits/panic_proof/src/: main.nr
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  SCALING_AND_MERKLE_TREES.md  THREAT_MODEL_AND_FORMAL_SPECS.md
keeper/: Dockerfile  grafana-dashboard.json  package.json
keeper/src/: index.ts
outputs/: results.json  snapshot.json
programs/proof-of-panic/: Cargo.toml
programs/proof-of-panic/src/: constants.rs  errors.rs  lib.rs
programs/proof-of-panic/src/instructions/: fund_reward_vault.rs  init_incentives.rs  init_position_registry.rs  init_positions.rs  initialize.rs  mod.rs  refresh_oracle.rs  submit_proof.rs  submit_proof_new.rs  update_incentives.rs  update_position_root.rs  update_risk.rs  upsert_position.rs
programs/proof-of-panic/src/state/: global_state.rs  incentives_config.rs  mod.rs  position_account.rs  position_registry.rs  risk_config.rs  user_position.rs
programs/target-perp/: Cargo.toml
programs/target-perp/src/: lib.rs
scripts/: 0-setup.sh  2-initialize.ts  3-snapshot.ts  4-simulate.sh  5-prove.sh  6-verify.ts  7-status.ts  8-benchmark.ts  ci-verify.ts  copy-proofs.js  demo.sh  generate-scenario-proofs.sh  generate-scenarios.sh  package-lock.json  package.json  tsconfig.json
simulator/: Cargo.toml
simulator/src/: adapters.rs  commitment.rs  lib.rs  liquidation.rs  main.rs  scenarios.rs  shock.rs  solvency.rs  types.rs  witness.rs
simulator/tests/: proptest.rs
sp1-program/: Cargo.toml
sp1-program/src/: main.rs
sp1-script/: Cargo.toml
tests/: proof-of-panic.ts  security.ts  target-perp.ts
