[package]
name = "panic-simulator"
version = "0.1.0"
edition = "2021"
description = "Off-chain deterministic stress-test simulator for Proof of Panic"

[[bin]]
name = "panic-simulator"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
hex = "0.4"
