[workspace]

[package]
version = "0.1.0"
name = "panic-sp1-script"
edition = "2021"
default-run = "prove"

[[bin]]
name = "prove"
path = "src/bin/main.rs"

[[bin]]
name = "aggregate"
path = "src/bin/aggregate.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
panic-simulator = { path = "../simulator" }
dotenv = "0.15.0"
bincode = "1.3.3"
sha2 = "0.10.8"

[build-dependencies]
sp1-build = { version = "6.0.1" }
