[package]
name = "proof-of-panic"
version = "0.1.0"
description = "A ZK-verified adversarial risk engine for Solana perpetual protocols"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_panic"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-mock-verify = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
pyth-sdk-solana = "0.10.6"
sha2 = "0.10"
sp1-solana = "0.1.0"
